load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gonzojive/heatpump
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=workspace_go_deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
