"""
A bazel module for the https://github.com/gonzojive/heatpump project.
"""

module(
    name = "github-gonzojive-heatpump",
    version = "0.0.1",
    compatibility_level = 1,
    repo_name = "github-gonzojive-heatpump",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
bazel_dep(
    name = "protobuf",
    version = "27.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "grpc",
    version = "1.65.0",
    repo_name = "com_github_grpc_grpc",
)
bazel_dep(
    name = "rules_proto",
    version = "6.0.2",
)
bazel_dep(
    name = "rules_go",
    version = "0.51.0",
    repo_name = "io_bazel_rules_go",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.22.10")

bazel_dep(
    name = "gazelle",
    version = "0.40.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "rules_oci",
    version = "1.8.0",
)
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "pkg_with_runfiles", version = "0.1")
git_override(
    module_name = "pkg_with_runfiles",
    commit = "112f18f93f9bb3b51d192243c045c537bea98ab9",
    remote = "https://github.com/gonzojive/pkg-with-runfiles",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_dgraph_io_badger_v3",
    "com_github_go_oauth2_oauth2_v4",
    "com_github_goburrow_modbus",
    "com_github_goburrow_serial",
    "com_github_golang_glog",
    "com_github_golang_protobuf",
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "com_github_howeyc_crc16",
    "com_github_inhies_go_bytesize",
    "com_github_johnsiilver_golib",
    "com_github_martinlindhe_unit",
    "com_github_rmrobinson_google_smart_home_action_go",
    "com_github_samber_lo",
    "com_github_stretchr_testify",
    "com_github_teambition_rrule_go",
    "com_github_yuin_goldmark",
    "com_google_cloud_go_firestore",
    "com_google_cloud_go_pubsub",
    "com_google_cloud_go_secretmanager",
    "org_golang_google_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
    "org_uber_go_fx",
    "org_uber_go_multierr",
    "org_uber_go_zap",
)
go_deps.gazelle_override(
    directives = [
        #"gazelle:build_file_proto_mode disable_global",
        "gazelle:proto disable",
    ],
    path = "github.com/dgraph-io/badger/v3",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "google.golang.org/grpc",
)
go_deps.archive_override(
    path = "github.com/rmrobinson/google-smart-home-action-go",
    sha256 = "1467fcada401f310784157ddfc419410f5eba77bc5eeb156cb8f7122f1ce6e23",
    strip_prefix = "google-smart-home-action-go-250c1e61f8f05926571d00c0072bae1602bd1fff",
    urls = [
        "https://github.com/gonzojive/google-smart-home-action-go/archive/250c1e61f8f05926571d00c0072bae1602bd1fff.zip",
    ],
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "distroless_base",
    digest = "sha256:1aae189e3baecbb4044c648d356ddb75025b2ba8d14cdc9c2a19ba784c90bfb9",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/ppc64le",
        "linux/s390x",
    ],
    # Use tag = "latest" and then canonicalize with the buildozer command output
    # in a warning message.
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "distroless_base")

# Needed to resolve https://github.com/grpc/grpc-java/issues/11275.
bazel_dep(name = "grpc-java", version = "1.64.0")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "firestore_emulator",
    sha256 = "489617f9c99d2733c884b7d6e58fe2808f5cb87c645edb967417690b8393c13e",
    urls = [
        "https://storage.googleapis.com/firebase-preview-drop/emulator/cloud-firestore-emulator-v1.15.1.jar",
    ],
)
