load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/gonzojive/heatpump/db",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/chiltrix",
        "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "db_test",
    srcs = ["db_test.go"],
    embed = [":db"],
    deps = [
        "//proto/chiltrix",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
