load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpcspec",
    srcs = ["grpcspec.go"],
    importpath = "github.com/gonzojive/heatpump/grpcspec",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_test(
    name = "grpcspec_test",
    srcs = ["grpcspec_test.go"],
    embed = [":grpcspec"],
)
