load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "oauthstore",
    srcs = [
        "client.go",
        "store.go",
    ],
    importpath = "github.com/gonzojive/heatpump/cloud/oauthstore",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_oauth2_oauth2_v4//:oauth2",
        "@com_github_go_oauth2_oauth2_v4//models",
        "@com_google_cloud_go_firestore//:firestore",
        "@org_golang_google_api//iterator",
    ],
)

go_test(
    name = "oauthstore_test",
    srcs = ["store_test.go"],
    args = [
        "-test.v",
        "-test.timeout=20s",
        "--alsologtostderr",
    ],
    data = [
        ":firestore-emulator",
    ],
    embed = [":oauthstore"],
    deps = [
        "//util/bazelrunfiles",
        "@com_github_go_oauth2_oauth2_v4//:oauth2",
        "@com_github_go_oauth2_oauth2_v4//models",
        "@com_github_golang_glog//:glog",
        "@com_github_johnsiilver_golib//development/portpicker",
        "@com_github_stretchr_testify//assert",
        "@com_google_cloud_go_firestore//:firestore",
        "@org_golang_x_sync//errgroup",
    ],
)

java_binary(
    name = "firestore-emulator",
    main_class = "com.google.cloud.datastore.emulator.firestore.CloudFirestore",
    runtime_deps = [
        "@firestore_emulator//jar",
    ],
)
