load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "secrets",
    srcs = ["secrets.go"],
    importpath = "github.com/gonzojive/heatpump/cloud/secrets",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go_secretmanager//apiv1",
        "@com_google_cloud_go_secretmanager//apiv1/secretmanagerpb",
        "@org_golang_x_net//context",
    ],
)
