load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stateservice",
    srcs = [
        "stateservice.go",
        "stateservice_db.go",
    ],
    importpath = "github.com/gonzojive/heatpump/cloud/stateservice",
    visibility = ["//visibility:public"],
    deps = [
        "//cloud/acls",
        "//cloud/google/cloudconfig",
        "//proto/controller",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_google_cloud_go_firestore//:firestore",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)
