load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stateservice",
    srcs = [
        "stateservice.go",
        "stateservice_db.go",
    ],
    importpath = "github.com/gonzojive/heatpump/cloud/stateservice",
    visibility = ["//visibility:public"],
    deps = [
        "//cloud/acls",
        "//cloud/acls/server2serverauth",
        "//cloud/google/cloudconfig",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto",
        "@com_google_cloud_go_firestore//:firestore",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)
