load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "authservice_lib",
    srcs = ["authservice_main.go"],
    importpath = "github.com/gonzojive/heatpump/cmd/authservice",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/acls",
        "//cloud/google/cloudconfig",
        "//proto/controller",
        "//util/grpcserverutil",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "authservice",
    embed = [":authservice_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "image_layer",
    srcs = [":authservice"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/authservice"],
    tars = ["image_layer"],
)

# container_push(
#     name = "push-image",
#     format = "Docker",
#     image = ":image",
#     registry = "us-west4-docker.pkg.dev",
#     repository = "heatpump-dev/project-images/authservice-image",
#     tag = "main",
# )
