load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cloud-listener_lib",
    srcs = ["cloud_listener_main.go"],
    importpath = "github.com/gonzojive/heatpump/cmd/cloud-listener",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/acls/deviceauth",
        "//cloud/queue/queueclient",
        "//proto/command_queue:command_queue_go_proto",
        "//proto/controller:controller_go_proto",
        "//proto/fancoil:fancoil_go_proto",
        "//util/grpcserverutil",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "cloud-listener",
    embed = [":cloud-listener_lib"],
    visibility = ["//visibility:public"],
)
