load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cx34dash_lib",
    srcs = ["cx34dash.go"],
    importpath = "github.com/gonzojive/heatpump/cmd/cx34dash",
    visibility = ["//visibility:private"],
    deps = [
        "//dashboard",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "cx34dash",
    embed = [":cx34dash_lib"],
    visibility = ["//visibility:public"],
)
