load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generate-and-store-secret_lib",
    srcs = ["generate_and_store_secret_main.go"],
    importpath = "github.com/gonzojive/heatpump/cmd/generate-and-store-secret",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/google/cloudconfig",
        "@com_github_golang_glog//:glog",
        "@com_google_cloud_go_secretmanager//apiv1",
        "@com_google_cloud_go_secretmanager//apiv1/secretmanagerpb",
        "@org_golang_google_api//iterator",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_crypto//ssh",
    ],
)

go_binary(
    name = "generate-and-store-secret",
    embed = [":generate-and-store-secret_lib"],
    visibility = ["//visibility:public"],
)
