load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heatpump-logger_lib",
    srcs = ["heatpump-logger.go"],
    importpath = "github.com/gonzojive/heatpump/cmd/heatpump-logger",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/heatpump-logger/loglib",
        "//grpcspec",
        "//proto/chiltrix",
        "//proto/fancoil",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_fx//:fx",
    ],
)

go_binary(
    name = "heatpump-logger",
    embed = [":heatpump-logger_lib"],
    visibility = ["//visibility:public"],
)
