load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "heatpump-oauth-server_lib",
    srcs = ["heatpump-oauth-server.go"],
    importpath = "github.com/gonzojive/heatpump/cmd/heatpump-oauth-server",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/google/cloudconfig",
        "//cloud/google/server/fulfilment",
        "@com_github_go_oauth2_oauth2_v4//errors",
        "@com_github_go_oauth2_oauth2_v4//manage",
        "@com_github_go_oauth2_oauth2_v4//models",
        "@com_github_go_oauth2_oauth2_v4//server",
        "@com_github_go_oauth2_oauth2_v4//store",
        "@com_github_golang_glog//:glog",
        "@com_github_rmrobinson_google_smart_home_action_go//:go_default_library",
        "@com_google_cloud_go_pubsub//:pubsub",
    ],
)

go_binary(
    name = "heatpump-oauth-server",
    embed = [":heatpump-oauth-server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    embed = [":heatpump-oauth-server_lib"],
    # srcs = ["heatpump-oauth-server.go"],
    importpath = "github.com/gonzojive/heatpump/cloud/google/server/cmd/heatpump-oauth-server",
)

container_push(
    name = "push_go_image",
    format = "Docker",
    image = ":go_image",
    registry = "us-west4-docker.pkg.dev",
    repository = "heatpump-dev/heatpump-testing/hello-world-image",
    tag = "tag1",
)
