load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "queueserver_lib",
    srcs = ["queueserver_main.go"],
    importpath = "github.com/gonzojive/heatpump/cmd/queueserver",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/acls",
        "//cloud/google/cloudconfig",
        "//cloud/queue/queueserver",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//reflection",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "queueserver",
    embed = [":queueserver_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "image_layer",
    srcs = [":queueserver"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/queueserver"],
    tars = ["image_layer"],
)

# container_push(
#     name = "push-image",
#     format = "Docker",
#     image = ":image",
#     registry = "us-west4-docker.pkg.dev",
#     repository = "heatpump-dev/project-images/command-queue-service-image",
#     tag = "main",
# )
