load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "reverse-proxy_lib",
    srcs = ["reverse-proxy.go"],
    importpath = "github.com/gonzojive/heatpump/cmd/reverse-proxy",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_binary(
    name = "reverse-proxy",
    embed = [":reverse-proxy_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "image_layer",
    srcs = [":reverse-proxy"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/reverse-proxy"],
    tars = ["image_layer"],
)

# container_push(
#     name = "push-image",
#     format = "Docker",
#     image = ":image",
#     registry = "us-west4-docker.pkg.dev",
#     repository = "heatpump-dev/project-images/reverse-proxy-image",
#     tag = "main",
# )
