load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel:go_proto_library.bzl", "go_proto_library")

proto_library(
    name = "chiltrix_proto",
    srcs = ["chiltrix.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "chiltrix_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/gonzojive/heatpump/proto/chiltrix",
    output_files = ["chiltrix.pb.go"],
    proto = ":chiltrix_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "chiltrix",
    srcs = ["chiltrix.pb.go"],
    importpath = "github.com/gonzojive/heatpump/proto/chiltrix",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
